remove container component from about page to fix spacing.

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -9,7 +9,7 @@
 
 .content {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 0 8%;
   padding-top: 8px;
 }
 
